# threadpooluniverse

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.github/workflows/: c-cpp.yml
include/: callbacktask.h  taskbase.h  threadpool.h  threadpoolexceptions.h
src/: callbacktask.cpp  taskbase.cpp  threadpool.cpp  threadpoolexceptions.cpp  workerthread.cpp  workerthread.h
src_test/: taskbase_test.cpp  tests_main.cpp  threadpool_test.cpp
src_test/util/: dummytask.cpp  dummytask.h
